update fix and new content

--- a/en/channels/02.03- Adding Channels.md
+++ b/en/channels/02.03- Adding Channels.md
@@ -1,4 +1,4 @@
-**To add channels to your account, you should:**
+**To add channels in your account, you should:**
 
 1. Click on your account on the top right of the page;
 
@@ -12,7 +12,7 @@
 
 ![](/img/channel/channel3.png)
 
-4. You will see a list with all channels available at the moment;
+4. You will see a list with all channels available to be connected;
 
 ![](/img/channel/channel2.png)
 
