--- a/en/channels/02.04-Deleting a Channel.md
+++ b/en/channels/02.04-Deleting a Channel.md
@@ -1,4 +1,4 @@
-**To delete to your account, you should:**
+**To delete a channel from your account, you should:**
 
 1. Click on the account button located on the top right;
 
@@ -8,6 +8,6 @@
 
 ![](/img/channel/channel5.png) 
 
-3. Click on the gear icon and Remove;
+3. Click on the gear icon and Remove the channel;
 
 ![](/img/channel/channel6.png) 
