--- a/en/expressions/09.02-Expressions Syntax.md
+++ b/en/expressions/09.02-Expressions Syntax.md
@@ -52,6 +52,7 @@ You can also concatenate operators `&`, for example: Hello `@(contact.first_name
 ## Expression's and Functions' types
 
 This is a full list of all available features of the platform.
+*Function* arguments into brackets `([…])` are optional. But notice, when replacing variables the quotation marks are necessary. e.g.: `@(format_time(now()))`
 
 ### **array**
 
