--- a/en/flows/06.02-Types of Flows.md
+++ b/en/flows/06.02-Types of Flows.md
@@ -1,13 +1,14 @@
-The platform provides three types of flows that are available according to the channel capacity when you are connected to your flow. Text messages flows are applied to SMS channels and social networking, as the Surveyor application, while the voice flows have a different structure. The type of flow is chosen during the flow creation.
+The platform provides three types of flows that are available according to each channel capacity. Text messages flows are applied for SMS, Social Networking Channels and Surveyor application as well. On the other hand, voice flows have a different structure from those as described below. 
 
 ![](/img/flow/flow11.png)
 
 **Text Message (Messaging)**
 
-Text Message is a kind of standard flow, each kind of channel includes necessary the functionally based on the text messages. Text Message Flows could be sent through an Android channel, a virtual number, or a social media platform like Twitter.
+Text Message is the default flow type, since every channel type includes necessarily the text-based messaging functionality. Text Message Flows could be sent through an Android channel, a virtual number, or a social media platform like Facebook, twitter or viber.
 
-**Telephone Calls**
+**Telephone Calls (Voice flows)**
 
 If you have a voice-enabled channel connected to your account (for example, a Twilio voice-enabled virtual number), you can create an Interactive Voice Response (IVR) when you go to dialog box “Create a Flow”. IVR flows allow you to apply flows logical messages based invoice to be sent through calls. Check our IVR section to more information about URA flows.
 
 **Android Cell Phone (Surveyor App)**
+Select this option to create a flow to be executed off-line using our Surveyor Android App.
