--- a/en/flows/06.04-Know the Flow Editor.md
+++ b/en/flows/06.04-Know the Flow Editor.md
@@ -1,21 +1,22 @@
+The Flow editor is where all the magic happens, in this space, you will be able to build your flows and drive your contacts through it. Here we provide you with the main features of both old and new flow editor.
 
-![](/img/flow/flow15.png)
-
-#### Flow Editor Anatomy ####
+#### Flow Editor Anatomy - Old Editor ####
 
 **1. Name**
 
-The given name to the created flow.
+The given name to the created flow. In this example the name of your flow is "New Flow"
+
+![](/img/flow/flow15.png)
 
 **2. Create Message**
 
-This button opens the steps editors, that comprehends two distinct dialogs: The action dialog (Send Message) and the split dialog (Wait for response). In general, we recommend starting a flow with a Send Message action, but you can find a more apropriated rule set.
+This button opens the steps editors, that comprehends two distinct dialogs: The action editor dialog (Send Message) and the split editor dialog (Wait for response). In general, we recommend starting a flow with a Send Message action, but you can find a more appropriate Action according to your needs.
 
 - Actions Editor
 
-The actions editor starts with the action Send Message, although you can click on the drop-down menu to alter a lot of actions dialogs. To access the split editor, click on the ramification icon on the top right of the action editor.
+The actions editor starts with the action Send Message, although you can click on the drop-down menu to choose any other type of actions. To access the split editor, click on the ramification icon on the top right of the action editor.
 
-![](/img/flow/flow16.png)
+![](/img/flow/createaction.png)
 
 - Split Editor
 
@@ -26,25 +27,29 @@ The actions editor starts with the action Send Message, although you can click o
  4. The categories that the correspondents values to response rules are located;
  5. The given name to the resulted variable.
 
+ ![](/img/flow/flow4.png)
+
 **3. Simulator**
 
 The simulator is a tool for you test your flows as a final user. When clicked, the simulator will start the first step on your flow.
 
 **4. Menu Configurations**
 
-TALK MORE ABOUT THE MENU CONFIGURATIONS
+Here you will be able to check flow results, edit your flow, copy and export your flow and review historical of modifications.
+
+![](/img/flow/menusettings.png)
 
 #### Results ####
 
 Click on the results options to see the results connected to the editing flow.
 
 #### Edit ####
+Click on the Edit option to:
 
- 1. Click on the  Edit option;
- 2. Alter the flows name;
- 3. Attribute triggers to the flow;
- 4. Adjust the flow expiration window;
- 5. Define that the flow ignores triggers when the contact is already on the flow.
+ 1. Alter the flows name;
+ 2. Attribute triggers to the flow;
+ 3. Adjust the flow expiration window;
+ 4. Define that the flow ignores triggers when the contact is already on the flow.
 
 ![](/img/flow/flow17.png) 
 
@@ -60,13 +65,26 @@ Click on this option to export a flow that you are editing as a JSON file.
 
 Click on this option to visualize the review historical flow that you are editing. Click on a review to see the flow version or return to that point.
 
-![](/img/flow/flow18.png)
-
 #### Delete ####
 Click on this option to delete the flow that you are editing.
 
+#### New Editor ####
+Click on this option to migrate your flow from the old editor version to the new editor version.
+
 **5. Start a Flow**
 
-Click on this button to put the contacts on the flow. You can add specifics contacts or groups. Select the “Restart any contacts above that are on the flow” if you want to restart the actives members on the flow.
+Click on this button to put the contacts on the flow. You can add specifics contacts or groups. Select the “Restart any contacts who have already entered on this flow” if you want to restart the active members on the flow.
 
 ![](/img/flow/flow19.png)
+
+**What is new in the New Flow Editor**
+
+In the New Editor you will also be able to build your flows and drive your contacts through it. There are some anotomical diferentes between the new and the old editor as follow:
+
+####Actions and Split Actions are shown in the same drop-down menu.####
+
+To access the split actions in the old editor you had to click on the ramification icon on the top right of the action set. For the new editor you can found action and split actions in the same drop-down menu.
+
+![](/img/flow/editoranatomy.png)
+
+
