--- a/en/flows/06.05- Defining Keywords for a flow.md
+++ b/en/flows/06.05- Defining Keywords for a flow.md
@@ -1,4 +1,4 @@
-You can attribute keyword(s) to a flow to allow your contacts to start a flow using your criteria. The keyword is the first word in a received message.
+You can attribute keyword(s) to a flow to allow your contacts to start it by using the criteria you set. A keyword is the first word in an incoming message.
 
 #### To attribute a keyword in a flow: ####
 
@@ -20,4 +20,4 @@ You can attribute keyword(s) to a flow to allow your contacts to start a flow us
 
 #### Ignoring triggers ####
 
-You can select the “Ignore triggers” to block that your contacts start another editing flow. When this box is selected, a contact can not start a new flow if send a keyword attributed to a different flow.
+You can select the “Ignore triggers” option to avoid that your contacts start another flow. When this option is selected, a contact cannot start a new flow if he send a message containing the keyword attributed to this specific flow.
