--- a/en/flows/06.07- Action Set.md
+++ b/en/flows/06.07- Action Set.md
@@ -1,43 +1,121 @@
+##Action Sets - Old Editor##
+
+Action Sets represents activities done in your flow, 
+
 ![](/img/flow/flow24.png)
 
-An Action Command represents some actions done in name of the flow. Essentially, they are commands that allow you:
+these actions allow you to:
 
-- Send an “SMS response”  (standard “send a message”: action – will send a message to the activated contacts that are on this flow step);
-- Send an SMS to another person “SMS to somebody else” 
+- Send a response message;
+- Send a message to somebody else;
 - Add a label to a Message;
-- Update the contact (with a received value from a response, for example);
-- Add contact to a group;
-- Remove contact from a group;
-- Make a call to an external server;
-- Send an Email;
-- Set a contact’s main language;
-- Start another flow;
-- Start someone else in a flow;
+- Update a contact;
+- Add a contact to a group;
+- Remove a contact from a group;
+- Send an email;
+- Set language for a contact;
+- Set prefered channel; 
+- Start another flow.
 
-Action commands comprehend actions that are executed immediately, on the top-down order:
+Action sets comprehend actions that are executed immediately, on the top-down order:
 
 ![](/img/flow/flow25.png)
 
-#### Creating Action Sets ####
+#### Creating Action Sets - Old Editor ####
 
-Click on the box “Create Message” to open the action editor illustrated on the photo below, or create a connection using the existing step.
+When you start a new flow, you need to create an Action Set. You can do that following the steps below:
 
-![](/img/flow/flow26.png)
+1.	Click on “Create Message”
 
-#### Adding an Action Set to an Existing Action Set ####
+![](/img/flow/createmsg.png)
 
-The actions can be connected to others Action Sets or be added as a step. Actions connected to other actions are immediately executed top-down.
+2. A box with a list of “Action Sets” will pop-up, select the action set you want and create it.
 
-![](/img/flow/flow27.png)
+![](/img/flow/flow24.png)
 
-On the example below, three actions are grouped to register a new contact. When a contact pass by this step, the actions happens on the order that they are organized.
+3. In this example, we created a “Send a response message” action.
 
-1. A message is sent to the “Alagoas” group warming them that there is a new user wanting information about Alagoas.
-2. The user is added to the group “Alagoas-Users”.
-3. Is sent a message to the user informing that we are going to contact soon.
+![](/img/flow/actionset.png)
 
-To add an action to an existing Action Set, click on the symbol “+” on the button right of the existing action and select an action on the action editor.
+
+#### Adding an Action Set to an existing Action Set - Old Editor ####
+
+Actions can be connected to others Action Sets, these activities will be executed in a top-down order within your flow. 
+
+To add an Action Set to and existing action set do as described below:
+
+1.	Click on the symbol “+” on the button right of the existing action 
+
+![](/img/flow/addaction.png)
+
+2. Choose the action you want to create from the given list and create it
+
+![](/img/flow/createaction.png)
+
+3. In this example, we create two new action sets. One to update the email from the contact and another to add this contact to a group. 
+
+![](/img/flow/createaction1.png)
+
  
-#### Deleting an Action ####
+#### Deleting an Action - Old Editor ####
 
-To delete an action, move the cursor on the action that you want to delete and click on the “x” icon. The action will become red and will request a deleting confirmation. Click on the “x” icon again to conclude the deleting process.
+To delete an action within your flow do as described below:
+
+1. Move the cursor on the action that you want to delete and click on the “x” icon. 
+
+2. The action will become red and will request a deleting confirmation. Click on the “x” icon again to conclude the deleting process.
+
+![](/img/flow/removeaction.png)
+
+##Actions - New Editor##
+
+In the New Editor we now have *Actions* instead of *Action Sets*. When creating flows in the new editor you will also be able to:
+
+1.	Send the contact a message;
+2.	Label the incoming message;
+3.	Add an URN for the contact;
+4.	Add the contact to a group;
+5.	Remove the contact from a group;
+6.	Update the contact;
+7.	Send an email;
+8.	Save a result for this flow;
+9.	Call webhook;
+10.	Call zapier;
+11.	Enter another flow;
+12.	Start somebody else in a flow;
+13.	Send the contact airtime.
+
+*Actions 10 and 11 used to be Rule actions on the old editor.*
+
+#### Creating Action - New Editor ####
+
+To create an Action in a new flow do as described below:
+
+1. Click on “Create Message”
+
+![](/img/flow/createmsg.png)
+
+2.	A box with a list of “Actions” will pop-up, select the action you want and create it.
+
+![](/img/flow/createaction2.png)
+
+##Adding an Action to an existing action - New Editor##
+
+Actions can be added to others actions and these activities will be executed in a top-down order within your flow. To add an Action to and existing action do as described below:
+
+1.	Click on the symbol “+” on the button right of the existing action
+
+![](/img/flow/addaction1.png)
+
+2.	Choose the action you want to create from the given list and create it
+
+![](/img/flow/createaction2.png)
+
+#### Deleting an Action - New Editor ####
+To delete an action within your flow do as described below:
+
+1. Move the cursor on the action that you want to delete and click on the “x” icon. 
+
+2. The action are going to become red and will request a deleting confirmation. Click on the “x” icon again to conclude the deleting process.
+
+![](/img/flow/removeaction1.png)
