--- a/en/flows/06.08-Sending a Message Through the Flow.md
+++ b/en/flows/06.08-Sending a Message Through the Flow.md
@@ -1,11 +1,17 @@
-“Send a response message” is an action that you will use to communicate with your contacts on a flow, allowing to avoid an automatic message when reaches a determined step on the flow.
+You can communicate with your contacts by using the “Send a Response message” in the old editor or the “Send the contact a message” in the new editor. These actions will allow you to send messages to your contacts within your flow. 
 
-On the example below, we create an action “Send Message” that sends a message to people who indicate interest in Alagoas, if they want to receive additional information about the State. Send a message, in the platform standard action flow, they are created every time that you drag a call from the red square on the button of each ActionSet or RuleSet.
+**Note that these actions are the same and have the same functionalities but with deferent designs as follow:**
 
-INSERT A PRINT
+1. Send a response message - old flow editor.
+
+![](/img/flow/sendmessage.png)
+
+2. Send the contact a message  - new flow editor.
+
+![](/img/flow/sendmessage1.png)
 
 **Characters Limites** 
 
-If a Send Message action exceds 160 characters, the message will be divided and send in two messages. There is a counter below the dialog box showing how many characters you can use until the 160 characters typed. On the example below, the message has 54 characters.
+One message has 160 characters limit, if your message exceeds this it will be divided in two messages. There is a counter below the dialog box showing how many characters you still have. On the example below, the message has 134 characters.
 
-INSERT A PRINT
+![](/img/flow/sendmessage2.png)
