--- a/en/flows/06.14-Starting Another Flow.md
+++ b/en/flows/06.14-Starting Another Flow.md
@@ -1,11 +1,41 @@
-Use the *Start Another Flow* to move your contacts from a flow to another one. When a contact passes through this step, the contact will be removed from the actual flow to start another one. 
-On the example below, we are directing the contacts according to the type of support needed.
+"Start another flow" or "enter another flow" are actions that will allow you to move a contact from a flow do another, in the old and new editor, respectively.
 
-**@extra variable**
+1. Start another flow - Old editor
 
-When a Start Another Flow is located into the flow, all flow variables created until that step are passed to the next flow. Into the new flow, collected variables on the previous flow are referred using the prefix @extra.
-For example, If you collect the contact's age (@flow.age) and localization (@flow.localization) in A flow, after that, use Start Another Flow to move the contact to a new flow, the B flow, you can refer the previously collected variables called @extra.flow.age and @extra.flow.localization:
+![](/img/flow/startanotherflow.png)
 
-![](/img/flow/flow44.png)
+2. Enter another flow - New Editor
 
-Notice that @extra variables are just capable to do a reference to values from a previous flow when contact starts a flow, through a Start Another Flow or Start Somebody Else in a flow.
+![](/img/flow/startanotherflow1.png)
+
+
+To move a contact from a flow to another in the old flow editor do as follow: 
+
+1. Select “Start another flow” option 
+
+2. Select the flow you want your contact to enter and click on “ok”.
+
+![](/img/flow/startanotherflow3.png)
+
+**Extra variables**
+When the contact enters another flow, you can access the contacts variables created in the parent flow by using the following expression:
+@extra.flow.email If you want to access the contact’s email;
+@extra.flow.phone if you want to access the contact’s phone.
+You can do it for any other contact’s variable you want to access in the new flow.
+
+To move a contact from a flow to another in the new flow editor do as follow: 
+
+1. Select “enter another flow” option 
+
+2. Select the flow you want your contact to enter and click on “ok”.
+
+![](/img/flow/startanotherflow2.png)
+
+**Parent results**
+When the contact enters another flow you can access the contacts variables created in the parent flow by using the following expression:
+@parent.results.email If you want to access the contact’s email
+@parent.results.phone if you want to access the contact’s phone.
+You can do it for any other contact’s variable you want to access in the new flow
+
+
+
