--- a/en/flows/06.15- Start Someone Else in Flow.md
+++ b/en/flows/06.15- Start Someone Else in Flow.md
@@ -1,19 +1,15 @@
-Use Start Someone Else in a Flow to put a contact or a separated group into a flow when a contact reaches this step. On the example below, we are calling the support contact when the user reaches on this point.
+Use Start Someone Else in a Flow to put a contact or a group into a flow when a contact reaches this step. 
 
 
 #### Creating a New Contact ####
 
-This action can be used to create a new contact on the flow.
-On the example below, Patient Register, the contacts are being invited to present the patients' names and phone number registered. When the information is collected, the Start Someone Else in a flow unleashed a new flow, Create a New Patient, a contact with the standard field will be created. Name and phone number are filled using an actualization from a contact variables flow (@flow.name and @flow.phone) collected on the previous flow, patient register. 
-The first flow collects patient information, while the second flow actualizes a contact profile for the patient.
+This action can be used to create a totally new contact. On the example below the contact in the “patient” flow is being invited to present the patient’s name and phone number. After the information was collected we used the “Start Someone Else in a flow” action to unleash the new flow “Create a New Patient”. 
+A new contact with the standard field (name and phone number) will be created in this new flow. Name and phone number are going to be filled using an Update the contact action using the results collected in the previous flow (patient)
+
+In summary, the first flow collects the patient information, while the second flow actualizes a contact profile for this patient.
 
 ![](/img/flow/flow45.png)
 
-The contact name and the phone number are collected, so the new contact phone number is sent to “Creating Contacts”.
+The contact name and the phone number are collected, then this information is sent to  “Create Contacts” flow.
 
-![](/img/flow/flow46.png)
-
-When the contacts phone number starts the flow  “Creating Contact”, it will be added to the contact guide. You can do this using an actualization on your Full Name Field to complete your profile. You can do this using an actualization command action putting the collected name on the previous flow (referred using the variable @extra.flow.name; all variables on the previous flow can be called using @extra before the variable name) on the full name contact field.
-
-![](/img/flow/flow47.png)
-
+When using the new editor you will follow the same steps mentioned above, the only difference is that you will found “Start Somebody Else in a flow” instead of “Start Someone Else in a Flow”.
