--- a/en/flows/06.16- Rule Set.md
+++ b/en/flows/06.16- Rule Set.md
@@ -1,4 +1,4 @@
-Rule Set are connection points on a flow. They are conditional declarations allowing to direct your contacts using:
+Rule Set are connection points on a flow. They are conditional declarations allowing you to direct your contacts in the flow by using:
 
 - A message received or recorded 
 - A contact field
