--- a/en/channels/02.01-Channels Introduction.md
+++ b/en/channels/02.01-Channels Introduction.md
@@ -1,35 +1,55 @@
 <div class="align-justify">
 
-Channels allow you to send and receive messages and calls through the plataform, you can connect how many channels as you want. Each channel has a different transfer tax (amount of messages sent by second.
+Channels are the bridge that connect the chat you build on Rapid Pro to your contacts. It allows your workspace to broadcast polls you create. There are more than 20 channels available in Rapid Pro and they can be classified as follow:
 
-### Channels Type
+### Channels Type ###
 
-The available channels can be separated by Aggregator (SMS and Voice), Android Phone (SMS), the Apps ( Surveyor, Twitter, Telegram e Facebook).  
+**Android Phones:** 
+Allow you to send SMS from platform using an android phone. This channel is recommended only if you are planning to send a low number of messages.
 
-### Aggregator (SMS and Voice)
+**Phone channels:** 
+Allow you to send voice messages or SMS from the platform to your contacts through a phone. You will need a local sim card number to activate these channels.
 
- Aggregators are services that process messages through multiples operators efficiently and fastly. It processes virtual numbers and codes that are easily connected on your account through integration with the platform. Twilio, Plivo, Nexmo are examples of globals aggregators (the can answer a lot of countries), Clickatell and Zevia are examples of locals aggregators. We recommend searching local aggregators before connect with a global aggregator (the price of local aggregators usually are cheaper than global aggregators).
+**Social Network channels:**
+Use popular social networks as Facebook messenger, twitter, telegram, viber and so on to create a bridge between your contact and the polls you want to broadcast from the platform. 
 
-**SMS:** We recommend to buy a free virtual number by Twilio to implement the SMS service on USA and Canada, to more locals we recommend to buy a conventional number. This channel is recommended to medium and high flows because the messages are forwarded in their highest frequency. The transfer tax for free numbers from Twilio is 3 messages by second, while the standard transfer tax is a message by second, Click here to see if Twilio offer virtual numbers to SMS in your country.
+**API channels:** 
+allow you to connect an external aggregator or messaging service to the platform using our external API.
 
-**Voice:** It is supported when your Twilio account is connected with your Account. Use a Twilio number with voice available (can be by default or toll-free) to send and receive voice messages or connect your Twilio voice and an Android Phone with your workspace.
-You can try our demonstrative voice flow through the phone number +1 888-531-0777, or sending an SMS with the word “Hey”. Notice that this is a number located in the USA. 
-Discount for unprofitable organizations: Twilio offer US$ 500 in credits and 25% discount to unprofitable organizations.
+*You can connect as much channels as you want, but it’s important to consider carefully which channels will be more popular among your contacts.*
 
-**Android Phone(SMS):** The Android Phone channel uses our Android Free App to transform your phone in a message transmitter to your account. When your account sends a message, your cell phone will be notified. The cell phone will send a message using your local number and your name. If someone answers this message, the cell phone will retransmit the message to your workspace. You can send until 330 messages by an hour.
+### Aggregator (SMS and Voice)###
+
+ Aggregators are services that process messages through multiples operators efficiently and fastly. It processes virtual numbers and codes that are easily connected on your account through integration with the platform. Twilio, Plivo, Nexmo are examples of globals aggregators and Clickatell and Zevia are examples of locals aggregators. We recommend searching local aggregators before connect with a global aggregator (the price of local aggregators are usually  cheaper than global aggregators).
+ 
+**Android Phones:** 
+
+ The Android Phone channel uses our Android Free App to transform your phone in a message transmitter to your account. When your account sends a message, your cell phone will be notified. The cell phone will send a message using your local number and your name. If someone answers this message, the cell phone will retransmit the message to your workspace. You can send until 330 messages by an hour. 
+
+ We recomend this channel if you:
 
 - Want to send a message immediately;
 - Are developing a service that is waited to send more than 330 messages per hour;
 - Want to implement in a country where the virtual numbers and shortcodes are not available yet.
 - Transmitter tax is a message per second.
 
+**SMS:** 
+
+This channel is recommended to medium and high flows because the messages are forwarded in their highest frequency. The transfer tax for free numbers from Twilio is 3 messages by second, while the standard transfer tax is a message by second. We recommend you to buy a free virtual number by Twilio to implement the SMS service on USA and Canada, to more locals we recommend to buy a conventional number.
+
+**Voice:** 
+
+Use a Twilio number with voice available (can be by default or toll-free) to send and receive voice messages or connect your Twilio voice and an Android Phone with your workspace.
+You can try our demonstrative voice flow through the phone number +1 888-531-0777, or sending an SMS with the word “Hey”. Notice that this is a number located in the USA. 
+Discount for unprofitable organizations: Twilio offer US$ 500 in credits and 25% discount to unprofitable organizations.
+
 ### Bulk Sending
 
-This channel is ideal for Android channels implementations that need to send more than 330 messages per hour. It implicates in to create and connect a Nexmo account for your account. When you enable the Sending Bulk, Nexmo will take care of your sending messages, keeping the sender identification in your Android Cell Phone, and your Android will take care of the received messages. The transfer tax is a message per second. Click here to get more information about the Nexmo development in your country.
+This channel is ideal for Android channels implementations that need to send more than 330 messages per hour. You will need to create and connect a Nexmo account in your workspace. When you enable the Sending Bulk, Nexmo will be responsible to send your messages keeping the sender identification in your Android Cell Phon, our Android will take care of the received messages then. The transfer tax is a message per second. 
 
 ### Surveyor
 
-The Push Surveyor Android App allows that you monitor the workflow to glean offline data using an Android CellPhone.
+The RapidPro Surveyor Android App allows that you monitor the workflow to glean offline data using an Android CellPhone.
 
 ### Telegram
 
@@ -37,13 +57,19 @@ Telegram is a service based on the cloud to send messages instantly - similar to
 
 ### Twitter
 
-Connect your twitter account and send up to 1000 direct messages per day through your Push account.
+Connect your twitter account and send up to 1000 direct messages per day through your RapidPro account.
+
+### Facebook Messenger
+
+Connect a Facebook page account your RapidPro workspace to communicate with your contacts.
 
 ### External API
 
-The API channel allows sending and receiving messages through external suppliers (there are more APIs not listed when the user wants to add a channel). This could be a chat/external message service or an aggregator not listed (although we are inclined to integrate with the case have a compromise of at least 100.000 credits).
+The API channel allows sending and receiving messages through external suppliers. This could be a chat/external message service or an aggregator not listed.
 For example, if you want to enjoy the platform automation provides through an external service, you could develop a link to your system and connect them through your API.
 
 As your contacts have the URN, type how your channel was configured, we will send messages using an extreme point to configure.
+
+##
 
 </div>
