--- a/en/expressions/09.05-Referencing the variables.md
+++ b/en/expressions/09.05-Referencing the variables.md
@@ -1,91 +1,91 @@
-## Contacts Variables ##
+## Contact's Variables
 
-@contact variable represents contacts field value specific for each contact presents in a flow.
+`@contact` rules represent contact's field values, individually for each respective contact.
 
-**@contact** – The contacts full name if have, if not, his/her phone number, for example, “Ben Haggerty”.
+The following `expressions` can be used in a flow to extract contact's data:
 
-**@contact.name** – As above, the contacts full name if have, if not, his/her phone number, for example, “Ben Haggerty”.
+  - `@contact` or `@contact.name` - Contact's full name if present, if not, contact's ID. eg.: "Ben Haggerty".
 
-**@contact.first_name** – The contacts first name, if it was defined, if not, his/her phone number, for example, “Ben”.
+  - `@contact.first_name` - Contact's first name, parsed from contact's full name stored at `name` if present, if not, phone number or contact's ID. eg.: "Ben".
 
-**@contact.tel** – The contacts phone number in a legible format, for example, “(206) 555 1212”.
-
-**@contact.tel_e164** – The contacts phone number in the E164 format, for example, “+12065551212”.
-
-**@contact.groups** – The groups that the contact have been located.
-
-**@contact.uuid** – The exclusive identification universally attributed to each contact.
-
-**@contact [contact-field]** – Any field that you created for your contacts, for example, “@Contact.age”.
+  - `@contact.display` - Contact's full name if present, if not, contact's URN. eg.: "Ben Haggerty".
+  - `@contact.fields` - Contact's field and respecive values.
+  - `@contact.urn` - Contact's full URN address.
+  - `@contact.language` - Contact's primary language in ISO code 639-2.
+  - `@contact.created_on` - Contact's creation date in timestamp.
+  - `@contact.groups` - Contact's groups membership.
+  - `@contact.urns` - Contact's full URN address in array for all workspace's channels.
+  - `@contact.uuid` - Contact's UUID.
+  - `@contact.channel` - Contact's preferred channel name.
 
 ![](/img/expressions/expression10.png)
 
-## Flow Variables ##
-@flow variables refer to values collected in each RuleSet into a flow. @flow variables just inform the values collected by the flow that they are called. This allows you to refer to the values previously collected or contacts actualization fields with a value sent by a contact. The variable name will correspond with the result name from the collected RuleSet.
+## Flow Variables
 
- ![](/img/expressions/expression11.png)
+Flow variables refer to values collected in each flow. `@results` variables just inform the values collected by the flow as they are in use. This allows you to refer to the values previously collected or update contact's fields with a value sent by a contact. The default variable name matches the result name from the flow step.
 
-When you type @flow in a step, you will see a drop-down menu with a list of variables on the flow that will be filled automatically.
+![](/img/expressions/expression11.png)
+
+When you type `@results` in a step, you will see a drop-down menu with a list of variables on the flow that will be filled automatically.
 
 ![](/img/expressions/expression12.png)
 
-**For example:**
+## Examples
 
-In the example below we will register a simple client using an email, phone number, and age.
+Below we will register a simple client using an e-mail, phone number, and age.
 
 ![](/img/expressions/expression13.png)
 
-The Wait for Phone Number RuleSet Collects answers from “…What is your phone number?” Send Message using an opened response rule and save the resulting values for a field flow named “Phone Number”:
+The *Wait for Phone Number* step collects answers from "…What is your phone number?" *Send Message* saving the response in a flow variable named `Phone Number`:
 
 ![](/img/expressions/expression14.png)
 
-The responses from your contacts can be referred with @flow.[prefix], in the case of the phone number we can use @flow.phonenumber to save the contacts phone number in a new field named “Phone Number”.
+Contact's responses can be referred with `@results.[prefix]`, in the case of the phone number we can use `@results.phone_number` saving to the respective contact's field.
 
- ![](/img/expressions/expression15.png)
+![](/img/expressions/expression15.png)
 
-Here is an extensive list that you can use to filer the flow variables according to your necessities [variable name], is a reserved space for any result presenting in the flow.
+See some possibilites that you can use to filter flow's variables according to your strategy. `[variable name]` is a reserved space for any result present on the flow.
 
-**@flow** - All flow variables collected until this point, for example, “Name: Jane, Age: 32”;
+`@results` - All flow variables collected until this point. eg.: "Name: Jane, Age: 32";
 
-**@flow.[variable name]** – The collected value, for example, @flow.age, “32”;
+`@results.[variable name]` - The collected value. eg.: `@results.age`, "32";
 
-**@flow.[variable name].category** - The category is evaluated for, for example, “Valide”;
+`@results.[variable name].category` - The category is evaluated for. eg.: "valid phone";
 
-**@flow.[variable name].text** - The entire text is evaluated using a Rule Set, for example, “I am 32 years old”;
+`@results.[variable name].value` - The entire text is evaluated using a Rule Set. eg.: "I am 32 years old";
 
-**@flow.[variable name].time** - The date and time when a flow value was collected, for example, “02/04/2016 19:11:50” (according to the date/time format).
+`@results.[variable name].input` - The date and time when a flow value was collected. eg.: "02/04/2016 19:11:50" (according to the date/time format).
 
-## Referencing a contact into the flow ##
+## Referencing a contact into the flow
 There are two ways to reference contact fields in the flow:
 
-**@contact** - Refer the contact that is receiving the message. On most of the cases, this is an active contact. Use the “ Send the Message to Someone”, @contact refer to the contact or contact group that will receive the message.
+`@contact` - Refer the contact that is receiving the message. On most of the cases, this is an active contact. Use the " Send the Message to Someone", @contact refer to the contact or contact group that will receive the message.
 
-**@step.contact** – Refer to the contact that sends the last message processed on the flow. On most of the cases, this is an active contact. Using the “Send an Action Response SMS”, @step.contact and @contact are the same contacts. Using the “Send a Message to Someone”, @step.contact refer to the contact that received the message from “Send a Message to Someone” in the flow, through triggers.
+`@step.contact` - Refer to the contact that sends the last message processed on the flow. On most of the cases, this is an active contact. Using the "Send an Action Response SMS", @step.contact and @contact are the same contacts. Using the "Send a Message to Someone", @step.contact refer to the contact that received the message from "Send a Message to Someone" in the flow, through triggers.
 
-## Channel Variable(@Channel) ##
+## Channel Variable `@channel`
 @Channel variables refer to a channel through a received message. For example, if a contact sends a message through an Android channel connected to his account, the variable @channel will be referred to a number attributed to the SIM card.
 
-**@channel** - the phone number that received the last message from the contact, in a legible format, for example, “(206) 555 1212”;
+`@channel` - the phone number that received the last message from the contact, in a legible format. eg.: "(206) 555 1212";
 
-**@channel.name** - the channel name (that can be edited clicking on the channel) ex: “Nexus 5”;
+`@channel.name` - the channel name (that can be edited clicking on the channel) ex: "Nexus 5";
 
-**@channel.tel** – the phone number that received the last contact message, in a legible format, for example, “(206) 555 1212”;
+`@channel.tel` - the phone number that received the last contact message, in a legible format. eg.: "(206) 555 1212";
 
-**@channel.tel_e164** – the E164 format from a phone number that received the last message from a contact, for example, “+12065551212”.
+`@channel.tel_e164` - the E164 format from a phone number that received the last message from a contact. eg.: "+12065551212".
 
-## Data Variable ##
+## Data Variable
 @date variables are referred to time values according to the time zone attributed to your account. Observe that the variable format @date depends on the format data configuration.
 
-**@date** - The actual date and time, for example, “2014/02/05 20:08”
+`@date` - The actual date and time. eg.: "2014/02/05 20:08"
 
-**@date.now** - The actual date and time, for example, “2014/02/05 20:08”
+`@date.now` - The actual date and time. eg.: "2014/02/05 20:08"
 
-**@date.today** - The actual date, for example, “2014/02/05”
+`@date.today` - The actual date. eg.: "2014/02/05"
 
-**@date.tomorrow** - The tomorrow date, for example, “2015/03/05”
+`@date.tomorrow` - The tomorrow date. eg.: "2015/03/05"
 
-**@date.yesterday** - The yesterday date, for example, “2014/01/05”
+`@date.yesterday` - The yesterday date. eg.: "2014/01/05"
 
-## Extras Variables ##
-@extra refers to variables extracted from an external application through a webhook, or if the flow is started for a Start Another Flow action, the flow variables associated with the contact on the previous flow, for example, @Extra.flow.response_1. If Start Someone Else in a Flow action was used to start flow, @extra can be also used to make references to previous contact fields (with @step variables).
-
+## Extras Variables
+@extra refers to variables extracted from an external application through a webhook, or if the flow is started for a Start Another Flow action, the flow variables associated with the contact on the previous flow. eg.: @Extra.flow.response_1. If Start Someone Else in a Flow action was used to start flow, @extra can be also used to make references to previous contact fields (with @step variables).
