--- a/en/flows/06.01-Flow Introduction.md
+++ b/en/flows/06.01-Flow Introduction.md
@@ -1,28 +1,33 @@
-Flow is the conditional logical tree visual representation applied for your contacts when they are in the flow. When the contact is in a flow, they interact directly with the steps. The steps are composed by Action commands, Rules commands and determine the flow length, that can be a simple and short flow or a complex and extensive flow.
+
+**Flow definition**
+
+A flow is a set of actions or steps organized in a flowchart, these actions are applied to your contacts when they enter in the flow. In the old editor the steps are composed by ActionSets and RuleSets; for the new editor these steps are called Actions and SplitActions.
 
 ![](/img/flow/flow1.png)
 
-#### Action Commands ####
+#### Action Sets - Old Editor ####
 
 ![](/img/flow/flow2.png)
 
-**The action command “ActionSet” represents some operations done in your flow. Essentially, these are commands that allow you:**
+**The “ActionSet” represents some operations done in your flow. Essentially, these are commands that allow you:**
 - Send an SMS answer “SMS response” (standard to “send a message”: action – will send a message to the actives contacts to reach this flows step);
 - SMS to somebody else;
 - Add a label to a Message;
 - Update the contact  (with a value received from an answer, for example);
 - Add a contact to a group;
 - Remove contact from a group;
-- Make a call to an external server;
 - Send an Email;
 - Set the contact’s main language;
 - Start another flow;
 - Start someone else in a flow;
-- Action commands comprehend actions executed immediately, on a top-down order.
 
-#### RuleSet ####
+Action commands comprehend actions executed immediately, on a top-down order:
 
-**Rule Sets are connection points in a flow. They are conditionals declarations that allow you to direct your contacts using:**
+![](/img/flow/actionset1.png)
+
+#### RuleSet - Old Editor ####
+
+**Rule Sets are connection points in a flow. They are conditionals declarations that allow you to direct your contacts by using::**
 - A received or recorded message
 - A contact field
 - A flow variable
@@ -53,7 +58,7 @@ Rule Sets comprehend 5 entries that allow you to build a powerful conditional in
 
 4. The answer rules value(s) will try to correspond the operator. Looking the example above, we create a rule set that tries to correspond to the cities from Alagoas. Using the “Wait for response” rule set the answer selected “has any of these words”, the received answers will be placed on the category named  “Alagoas” if this corresponds to some listed word. This allows us to place the answer “I live in Maceió” on the category “Alagoas” because the word “Maceió” is contained on the rule. Notice that flow will always be correspondent at least one rule.
 
-5. The category where the contacts are located if the answer corresponds to a correspondent answer rule. The categories are the way where the connections can be guided to new steps, orienting the contact.
+5. The the responses from your contacts.
 
 ![](/img/flow/flow6.png)
 
@@ -61,15 +66,14 @@ Rule Sets comprehend 5 entries that allow you to build a powerful conditional in
 
 When someone is at this point in the flow, wait for an answer. If the answer contains any of these words -. ‘Maragogi’, ‘Arapiraca’, ‘Maceio’, etc. – classify as Alagoas on the flow variable ‘State’.
 
-*Flow context comprehends the available variables on a determined flow. These are the flow variables used by action commands, but you can add contacts variables associated with a contact used through a flow, or data obtained from an external font through a webhook.
+*Flow context comprehends the available variables on a determined flow. These are the flow variables used by action commands, but you can add contacts variables associated with a contact used through a flow, or data obtained from an external font through a webhook.*
 
 #### Flow members ####
-Flows are exclusive spaces where your contacts will get in and get out. When the contact is on the flow, it becomes a flow active member until the contact goes out of the flow. Passages through flow from entry to exit - it is all activity that happens in the middle- constitutes a “race”. Races and activities happened into the flow are exposed as a flow result. “Races” flow can be listed and started externally through an API.
-The active members' number is represented by the blue button located on the top left of each rule set.
+Flows are exclusive spaces where your contacts will get in and get out.  When a contact is inside a flow, he becomes an active member of the until the contact comes out from it. The Passage through a flow from entry to exit is all activity that happens midway and constitutes a “run”. Runs and activities that happen within a flow are displayed in flow results. Flow “runs” flow can be listed and started externally through an API. 
 
 ![](/img/flow/flow7.png)
 
-You can click on the icon to see the active contacts names on this step and, if necessary, send them an accompaniment message.
+The active members in a flow are represented by the blue button located on the top left of each rule set.
 
 ![](/img/flow/flow8.png)
 
@@ -78,27 +82,27 @@ You can click on the icon to see the active contacts names on this step and, if 
 - They can put contacts on a flow started by a campaign event;
 - They can start a flow through a trigger.
 - A contact started a flow calling to a telephone number on its channel.
-- A flow is started by a lost call;
+- A flow is started by a missed call;
 - A contact started by a flow through a message send for your channel that is not processed in another place.
 
 #### Getting out a flow ####
 **A contact will get out of a flow when:**
-- Completes a flow finishing the last step;
+- Completes a flow by finishing the last step;
 - Passes for a step that don't have a continuation;
-- Passe for an action that starts another flow;
-- If the flow participation expired after a determined time of definitely inactivity on the flow dialog actualization into the flow editor.
+- Passes for an action that starts another flow;
+- If the flow participation expired after a determined period of  contact inactivity 
+
 
 ![](/img/flow/flow9.png)
 
 #### Members Rules Flow ####
-The contacts will interact with a flow one-by-one. If contact is simultaneously located in more than one flow, the answers will be processed in the most recent flow. While a contact is active in a flow, the answers are processed exclusively for the active flow on the moment until the user goes out or the time limit.
+The contacts will interact with flows  one-by-one. If contact is simultaneously located in more than one flow, the answers will be processed in the most recent flow. While a contact is active in a flow, the answers are processed exclusively for the active flow until the contact goes out of this flow. 
 
 **The Best Edition Practices**
 1. Keep the proportion of 1:1 Answer/Message
-The campaign's events exception are escalated for each individual contact, flows should correspond to each received message for a send message, and the opposite.
-2. Build horizontally 
-We recommend building a vertical flow. The flow editor is projected to support the horizontal movement until a point but will expand indefinitely vertically.
-3. Segment your Flows
-If the flow is very large, consider dividing it in other flows using the rule command “Start another flow”.
+
+2.	Do not build flows horizontally; the flow editor has a limited capacity for horizontal flows.  We recommend you to build flows in a  vertical direction;
+
+3.	Segment your flows if  they are too large. Consider dividing it in other flows by using the rule command “Start another flow”.
 
 ![](/img/flow/flow10.png)
