--- a/en/flows/06.03-Creating a New Flow.md
+++ b/en/flows/06.03-Creating a New Flow.md
@@ -11,16 +11,17 @@ To create a flow:
 **The dialog box “Create a Flow” will appear, so you can:**
 - Define the flows name;
 - Attribute keyword triggers;
-- Specify how much time the contacts still inactive on the flow before being deleted;
+- Specify how much time a contact can stay inactive on the flow before being deleted;
 - Select the type of flow that you would like to create;
 - Define the language that you will edit it.
 
 When the adequate attributes are defined, click on the “Create” button to go to the flow editor.
 
-**Best Edition Practices**
-1. Build Horizontally
-While the flow builds, we recommend drawing your flow vertically. The flow editor is projected to support the horizontal movement until a point but will permit the vertical movement indefinitely.
-2. Segment your Flow
-If the flow that you want to build is large, consider dividing it in various flows using a rule set to start other flow action.
-
 ![](/img/flow/flow14.png)
+
+
+**Best Edition Practices**
+1. Keep the proportion of 1:1 Answer/Message. 
+2. Do not build flows horizontally; the flow editor has a limited capacity for horizontal flows.  We recommend you to build flows in a  vertical direction 
+3. Segment your flows if  they are too large. Consider dividing it in other flows by using “Start another flow”.
+
