--- a/en/flows/06.06-Starting a Flow.md
+++ b/en/flows/06.06-Starting a Flow.md
@@ -1,10 +1,15 @@
-If your contacts want to interact into the flow, they should be initialized. A flow can be initialized in different ways:
+If your contacts want to interact with a flow it should be initialized. 
 
-- You can initialize manually a flow when you want through the box  “Start a flow” on the flow editor;
-- Your contacts can initialize a flow receiving a keyword;
-- A flow can be started in a future date or a scheduled;
-- A flow can be started through a campaign event;
-- A flow can be started after a lost call;
-- A flow can be started after a received call;
-- A flow can be started after receiving a message not handled elsewhere.
+ A flow can be initialized in different ways:
+
+ 1. You can initialize manually a flow whenever you want by clicking on the box “Start a flow” on the flow editor:
+
+ ![](/img/flow/startflow.png)
+
+2. Your contacts can initialize a flow writing keyword set by you;
+3. A flow can be started in a future date or a scheduled;
+4. A flow can be started through a campaign event;
+5. A flow can be started after a missed call;
+6. A flow can be started after a received call;
+7. A flow can be started after receiving a message not handled elsewhere.
 
