--- a/en/flows/06.09-Sending a Message to Somebody Else.md
+++ b/en/flows/06.09-Sending a Message to Somebody Else.md
@@ -1,29 +1,15 @@
-You can add an action on your flow to avoid sending a message to somebody who is not an active contact on this step. For example, this action can be used for:
+You can send messages to contacts that are not active in a particular flow by using the “Send a message to somebody else” in the old editor or the “Send somebody else a message” in the new editor.  
 
-- Other contacts progress warmings on a flow;
-- Contact response warming for an answer in a flow;
-- Link a contact with a team member able to talk directly on your own cell phone.
+1. “Send a message to somebody else” - Old editor
 
-#### Forwarding Messages
+![](/img/flow/sendmessage3.png)
 
-On the example below, a flow was configured to forward a response to a contact from a specific question to the members' team:
+2. “Send somebody else a message”  - New editor
 
-On the messages above, we use variables to represent the following information about each contact on this step:
+![](/img/flow/sendmessage4.png)
 
-**@step.contact.name:** Represents the contacts name activated on the flow;
+**How it Works**
 
-**@flow.estado:** Represents the State chosen for the contact on the “Wait for Estado” step;
+Imagine you have a contact that want to book a room on a hotel. The contact is responding the “Reservation Flow” then he is an active contact in this flow.  At particular step, the flow will check if there are places on the Hotel. You can use “Send a message to somebody else” Action to broadcast a message to the Hotel staff (contact not active in the flow) to check availability. Check the example bellow done in the new flow editor.
 
-**@step.contact.email:** Represents the user email.
-
-#### @Step.contact vs. @contact ####
-
-Notice that there are two ways to do a contact reference in the fields into the flow.
-
-**@contact-** Refer the contact who is going to receive a message. On most of the cases this is an active contact – the person who responses are being manipulated into the flow. To Send a Message to Someone Else, @contact refer to a contact or a contact group that the message is going to be sent.
-
-**@Step.contact-** refer the contact who sent the last processed message on the flow. Most of the cases, this is also an active contact. To use Send a Message, @step.contact e @contact  are the same contact. To use Send a Message to Someone Else, @step.contact refer the contact who reach the Send a Message to Someone Else on the flow, then, sending the message.
-
-**Look here an example:**
-
-When a message is created by Send a Message to Someone Else is sent to Nelson, @contact.first_name will be replaced for the Nelson first name. @Step.contact.name and @step.contact.email will be replaced for the name and contacts email through the flow.
+![](/img/flow/sendmessage5.png)
