--- a/en/flows/06.11-Classifing and Deleting Contacts in Groups.md
+++ b/en/flows/06.11-Classifing and Deleting Contacts in Groups.md
@@ -1,5 +1,7 @@
 ## Adding contacts to a group ##
 
+**Old Editor**
+
 1. Go to the flow editor;
 
 2. Click on and drag the red box on the action;
@@ -14,10 +16,39 @@
 
 ## Deleting Contacts from a Group ##
 
-Use the “Remove contact from a group” to remove a contact from a group on the flow.
+Use the “Remove contact from a group” to remove a contact from a group frow a flow.
 
 ![](/img/flow/flow33.png)
 
 Choose the group(s) that you want to remove the contact from.
 
 ![](/img/flow/flow34.png)
+
+**New Editor**
+
+## Adding contacts to a group ##
+
+1.	Go to the flow editor;
+
+2. Click on and drag the red circle on the action; 
+
+3. Use the action “Add the contact to a group” to add contacts to a group from the flow;
+
+![](/img/flow/groupadd.png)
+
+4.	You can choose one or more groups to enter contacts
+
+![](/img/flow/groupchoose.png)
+
+## Deleting Contacts from a Group ##
+
+1. Use the "Remove the contact from a Group" to remove a contact from a group from the flow
+
+![](/img/flow/groupremove.png)
+
+2.	Choose the group(s) to remove the contact from.
+
+![](/img/flow/groupremove1.png)
+
+
+
