--- a/en/flows/06.12-Adding Labels to Responses.md
+++ b/en/flows/06.12-Adding Labels to Responses.md
@@ -1,4 +1,9 @@
-Use the Create Label action to label the received messages processed on the flow. Consider that the contacts groups classification allows the contact segmentation based on your responses, labeling the received messages allows to isolate the responses of a specific question. Messages label can be seen - and created - in the split messages.
+Labeling the messages allow you to classify the responses according to a specific subject and organize your workspace.
+
+##How It Works## 
+Imagine you are executing a study about welfare and the participants are invited to indicate how they are feeling every day - healthy or sick. You can label their responses by creating a label on the message guide or within your flow using “Add a label message” in the old editor or “Label the incoming message” in the new editor. 
+
+Learn bellow how to create a label on the message guide:
 
 1. Click on the messages guide;
 
@@ -8,25 +13,36 @@ Use the Create Label action to label the received messages processed on the flow
 
 ![](/img/flow/flow36.png)
 
-3. Then, you can give a name to the new label;
+3. Then, you can give a name to the new label or choose an ecxisting one;
 
 ![](/img/flow/flow37.png)
 
-## How it works ##
-Let's say that you are executing a study about adhesion therapy that the participants are invited to indicate how they are feeling every day - healthy or sick. Adding the action Add label after the RuleSet “Wait for Health” allows to filter responses that pass for a particular category.
-
-## Adding a Label ##
+## Add a Label message - Old Editor ##
 Add a label is so easy as create an ActionSet, or add an ActionSet to an ActionSet existent. You can choose an existent label or create a new using the Add Label dialog box.
 
-1. Go to the flow editor;
+1.	Go to the flow editor;
 
-2. Click and drag the red box on the action to create a ActionSet;
+2.	Click and drag the red box on the action to create it;
 
-3. Click on Add a Label to a Message;
+3.	Click on "Add a Label to a Message";
 
 ![](/img/flow/flow38.png)
 
-4. Choose one or more labels.
+4. Choose one or more labels create new ones.
 
 ![](/img/flow/flow39.png)
 
+## Add a Label message - New Editor ##
+Click on "Label the Incoming Message" to label your contacts responses.
+
+1.	Go to the flow editor;
+
+2.	Click and drag the red circle on the action to create it;
+
+3.	Click on "Label the Incoming Message";
+
+![](/img/flow/addlabel.png)
+
+4. Choose one or more labels or create new ones.
+
+![](/img/flow/addlabel1.png)
