--- a/en/flows/06.13-Sending an Email.md
+++ b/en/flows/06.13-Sending an Email.md
@@ -13,6 +13,9 @@ Use the Send an Email to send an Email using the flow. The resulting email can
 - @extra, ex.: @ (HOUR (NOW ()))
 
 ## To send an Email ##
+
+**Old Editor**
+
 1. Go to your flow;
 
 ![](/img/flow/flow40.png)
@@ -21,15 +24,25 @@ Use the Send an Email to send an Email using the flow. The resulting email can
 
 ![](/img/flow/flow41.png)
 
-3. Select the option Send an Email on the drop-down menu.
+3. Select the option “Send an Email” on the drop-down menu.  Here you set to whom you will send the message, subject and write the email on the box. 
 
 ![](/img/flow/flow42.png)
 
-On the example above, we demonstrated how a company can use this action to send an email with a notification to the team informing that there is a client is requesting information about a product.
+**New Editor**
+
+1.	Go to your flow;
+2.	Click on and drag the circle to create a new Action 
+
+![](/img/flow/chooseemail.png)
+
+3. Select the option “Send an Email” on the drop-down menu.  Here you will set to whom you will send the message, subject and write the email on the box. Click on ok to send it 
+
+![](/img/flow/sendemail.png)
+
 
 ## Creating a Pipeline Email ##
 
-This action is a super simple way to send a question from a contact to a team member. You just need to create a flow asking for a contact name, question and favorite response method, configure the platform to send an email containing this information outside the platform or slack channel. The team members are capable to instantaneously access the ticket through your CRM or Slack ID and response appropriately.
+This action is a simple way to send a question from a contact to a team member. You just need to create a flow asking for a contact name, question and favorite response method. Then configure the platform to send an email containing this information outside of the platform or slack channel. The team members will be capable to instantaneously access the ticket through your CRM or Slack ID and response appropriately.
 
 ![](/img/flow/flow43.png)
 
