--- a/en/flows/06.19- Creating a Flow in Different Languages.md
+++ b/en/flows/06.19- Creating a Flow in Different Languages.md
@@ -1,7 +1,9 @@
-After defining the first and second language in your account, you can edit your flows to alter between different languages, depending on the languages preferences from your contacts. After to select languages to your organization, you can create flows in different languages, following these steps:
+After defining the first and second language for your account, you can edit your flows to alter between different languages according to your contacts languages preferences. 
+
+You can create flows in different languages, following these steps:
 
 1. Go to the flow guide and create a flow;
-2. Select the first language in the flow. This will be the idiom that you will see in your flow. If the flow doesn't have translations, this will be the standard language used;
+2. Select the first language in the flow, it will be the idiom you will see when your flow does not have translations yet.
 
 ![](/img/flow/flow66.png)
 
@@ -10,18 +12,18 @@ After defining the first and second language in your account, you can edit your 
 
 ![](/img/flow/flow67.png)
 
-5. Each yellow box means that wasn't translated yet;
+5. Each yellow box means that it was not translated yet;
 
 ![](/img/flow/flow68.png)
  
-6. Clique em cada caixa para adicionar a tradução;
+6. Click on the box to add the translated text;
 
 ![](/img/flow/flow69.png)
 
-Nota: @contact.first_name e outras variáveis não devem ser traduzidas, porque elas serão substituídas por seus valores correspondentes quando as mensagens forem enviadas.
+Notice that: @contact.first_name and other variables do not should be translated, because they will be replaced by the correspondents values when the message is sent.
 
-7. As etapas traduzidas apareceram em branco enquanto o idioma que elas vão ser traduzidas estejam selecionadas.
+7. The translated steps appear in white while the messages in the first language still yellow.
 
 ![](/img/flow/flow70.png)
 
-8.When the flow is totally translated, the contacts will receive messages according to the languages preferences.
+8.When the flow is totally translated, the contacts will receive messages according to their languages preferences.
