--- a/en/flows/06.23-Exporting and Importing a Flow.md
+++ b/en/flows/06.23-Exporting and Importing a Flow.md
@@ -1,5 +1,5 @@
 ## Export a flow: ##
-Use this action to export Flows. You can export a flow to share with other accounts or to save a specific version of your flow to use in the future.
+Use this action to export Flows. You can export a flow to share it with another account or to save a specific version of your flow and use it in the future.
 
 1. Go to the flows guide;
 
@@ -11,11 +11,11 @@ Use this action to export Flows. You can export a flow to share with other accou
 
 3. Click on the gear icon;
 
-4. Select the option “Export” on the Configure drop-down menu.
+4. Select the option “Export” on the configuration drop-down menu.
 
 ![](/img/flow/flow79.png)
 
-5. Click on Export button and a JSON file will be downloaded on your browser.
+5. Click on Export button then a JSON file will be downloaded on your browser.
 
 ## Import a flow: ##
 Use this action to import flows to your account.
@@ -24,7 +24,7 @@ Use this action to import flows to your account.
 
 ![](/img/flow/flow80.png)
 
-2. Click on the configure icon to access your drop-down menu and click on the Import button to start the importation process.
+2. Click on the configuration icon to access your drop-down menu and click on the Import button to start the importation process.
 
 ![](/img/flow/flow81.png)
 
