disabled legacy content

--- a/en/expressions/09.01.1-Expressions.md
+++ b/en/expressions/09.01.1-Expressions.md
@@ -1,3 +1,4 @@
+<!-- Legacy. Previously added as full Expression's content.
 # Expression Syntaxes
 Understand what is it and how to use available functions and expressions.
 
@@ -1041,3 +1042,4 @@ Expressions are modeled within specific syntaxes and starting with an `@` will l
 @(word_slice("bee.*cat,dog", 1, -1, ".*=|,")) → cat dog
 @(word_slice("O'Grady O'Flaggerty", 1, 2, " ")) → O'Flaggerty
 ```
+-->
