--- a/en/expressions/09.05-Reference Functions.md
+++ b/en/expressions/09.05-Reference Functions.md
@@ -1,3 +1,5 @@
+<!--Legacy. Organized into 9.02 and 9.06.
+
 Function Arguments into the bracket ([…]) are optional. Notice that, when you replace variables, e.g.: @(TIMEVALUE (flow.12_hour_time.category)), the quotation marks are necessary.
 
 ## Date and Time Functions ##
@@ -348,3 +350,5 @@ If the expression is not the only function or variable call, so you should put t
 
 - @ (SUM (contact.reports, step.value)) * 2 <- o “* 2” is not evaluated, should be written as: 
 - @ (SUM (contact.reports, step.value) * 2)
+
+-->
