image update and respective links

--- a/en/expressions/09.03-Logical Expressions.md
+++ b/en/expressions/09.03-Logical Expressions.md
@@ -9,7 +9,7 @@ The logical expressions evaluates within `TRUE` or `FALSE` using below operators
 
 **For example:**
 
-- @(contact.age > 18)
-- @((contact.age - result.born) >= 2000)
+- `@(contact.age > 18)`
+- `@((contact.age - result.born) >= 2000)`
 
 Notice that when you can also compare string values using equals `=` or different `!=`, the operators don't differ from Upper or Lower case.
