--- a/en/expressions/09.03-Logical Expressions.md
+++ b/en/expressions/09.03-Logical Expressions.md
@@ -1,4 +1,4 @@
-The logical expressions evaluates within `TRUE` or `FALSE` using below operators:
+The logical expressions evaluate within `TRUE` or `FALSE` using below operators:
 
 - Equals `=`
 - Different `!=`
