--- a/en/expressions/09.04-Date and Time Values.md
+++ b/en/expressions/09.04-Date and Time Values.md
@@ -3,7 +3,7 @@ Dealing with date requires you to understand *which*, *where* and *how* to `incr
 
 ## Increase or decrease ranges
 
-The *Function* used for this is `datetime_add` and you may select what range to modify using the correct syntaxe. See some examples:
+The *Function* used for this is `datetime_add` and you may select what range to modify using the correct syntax. See some examples:
   
   **Increasing**
 
