--- a/en/expressions/09.06-Referencing the variables.md
+++ b/en/expressions/09.06-Referencing the variables.md
@@ -4,23 +4,23 @@
 
 The following `expressions` can be used in a flow to extract contact's data:
 
-  - `@contact` or `@contact.name` - Contact's full name if present, if not, contact's ID. eg.: "Ben Haggerty".
+  - `@contact` or `@contact.name` - Contact's full name if present, if not, contact's ID. eg.: "Ben Haggerty".
 
-  - `@contact.first_name` - Contact's first name, parsed from contact's full name stored at `name` if present, if not, phone number or contact's ID. eg.: "Ben".
+  - `@contact.first_name` - Contact's first name, parsed from contact's full name stored at `name` if present, if not, phone number or contact's ID. eg.: "Ben".
 
-  - `@contact.display` - Contact's full name if present, if not, contact's URN. eg.: "Ben Haggerty".
-  - `@contact.fields` - Contact's field and respecive values.
-  - `@contact.urn` - Contact's full URN address.
-  - `@contact.language` - Contact's primary language in ISO code 639-2.
-  - `@contact.created_on` - Contact's creation date in timestamp.
-  - `@contact.groups` - Contact's groups membership.
-  - `@contact.urns` - Contact's full URN address in array for all workspace's channels.
-  - `@contact.uuid` - Contact's UUID.
-  - `@contact.channel` - Contact's preferred channel name.
+  - `@contact.display` - Contact's full name if present, if not, contact's URN. eg.: "Ben Haggerty".
+  - `@contact.fields` - Contact's field and respecive values.
+  - `@contact.urn` - Contact's full URN address.
+  - `@contact.language` - Contact's primary language in ISO code 639-2.
+  - `@contact.created_on` - Contact's creation date in timestamp.
+  - `@contact.groups` - Contact's groups membership.
+  - `@contact.urns` - Contact's full URN address in array for all workspace's channels.
+  - `@contact.uuid` - Contact's UUID.
+  - `@contact.channel` - Contact's preferred channel name.
 
 ![](/img/expressions/expression10.png)
 
-While `@contact` refers to the active contact that is receiving the message. But using the *Send somebody else a message*, `@contact` refer to another contact that will receive the message (you will also see it's possible to set a contact's group).
+While `@contact` refers to the active contact that is receiving the message. But using the *Send somebody else a message*, `@contact` refers to another contact that will receive the message (you will also see it's possible to set a contact's group).
 
 ## Flow Variables
 
@@ -42,11 +42,11 @@ The *Wait for Phone Number* step collects answers from "…What is your phone nu
 
 ![](/img/expressions/expression14.png)
 
-Contact's responses can be referred with `@results.[prefix]`, in the case of the phone number we can use `@results.phone_number` saving to the respective contact's field.
+Contact's responses can be referred to as`@results.[prefix]`, in the case of the phone number we can use `@results.phone_number` saving to the respective contact's field.
 
 ![](/img/expressions/expression15.png)
 
-See some possibilites that you can use to filter flow's variables according to your strategy. `[variable name]` is a reserved space for any result present on the flow.
+See some possibilities that you can use to filter flow's variables according to your strategy. `[variable name]` is a reserved space for any result present on the flow.
 
 `@results` - All flow variables collected until this point. eg.: "Name: Jane, Age: 32";
 
@@ -60,7 +60,7 @@ See some possibilites that you can use to filter flow's variables according to y
 
 ## Channel's expressions
 
-`@contact.channel` refer to a channel a message is flowing through. For example, if a contact sends a message through Facebook, the variable `@contact.channel` will be referred to a Facebook account ID.
+`@contact.channel` refers to a channel a message is flowing through. For example, if a contact sends a message through Facebook, the variable `@contact.channel` will be referred to like a Facebook account ID.
 
 `@contact.channel.name` - the name of the contact's preferred channel. eg.: "my Facebook page".
 
@@ -70,7 +70,7 @@ See some possibilites that you can use to filter flow's variables according to y
 
 ## Date' expressions
 
-Date's expressions refer to timezone option set on the workspace settings. Observe that the variable format depends on the data template configuration.
+The date's expressions refer to the timezone option set on the workspace settings. Observe that the variable format depends on the data template configuration.
 
 `@(now())` - The actual date and time in timestamp template. eg.: "2019-12-05T22:07:42.583440+03:00"
 
@@ -78,7 +78,7 @@ Date's expressions refer to timezone option set on the workspace settings. Obser
 
 `@(format_date(today()))` - The actual date. eg.: "05-12-2019"
 
-`@(format_date(datetime_add(now(), 1, "D")))` - Tomorrow's  date. eg.: "06-12-2019"
+`@(format_date(datetime_add(now(), 1, "D")))` - Tomorrow's  date. eg.: "06-12-2019"
 
 `@(format_date(datetime_add(now(), -1, "D")))` - Yesterday's date. eg.: "04-12-2019"
 
