--- a/en/expressions/09.01-Expressions and Variables Introduction.md
+++ b/en/expressions/09.01-Expressions and Variables Introduction.md
@@ -1,7 +1,7 @@
 ## Expressions and variables intro
 
 By now you may know that building a flow is connecting a collection of actions altogether and it intends to gather some result. That's what variables are for, store flow's step values and persist data.
-For example, the *Wait for response* below will generate a flow variable named *name* as the contact reply to it. Additionally the variable will used to save the data into *Name* contact's field.
+For example, the *Wait for response* below will generate a flow variable named *name* as the contact reply to it. Additionally, the variable will be used to save the data into *Name* contact's field.
 
 ![](/img/expressions/ExpressionIntroSample.png)
 
@@ -24,4 +24,3 @@ When using flow's expressions it's also possible to specify the metadata you're 
 ![](/img/expressions/ExpressionIntroList03.png)
 
 Each expression represents the value when contact is active on the flow. If you type an incorrect expression, the message will show itself.
-
